--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,7 @@ section {
     font-family: cursive;
     font-size: 100px;
     flex-direction: column;
-    background: lime;
+    background: black;
     color: #fff;
     padding: 0 50px;
 }
